updated on messages minor changes